# edge_ai

./: Cargo.toml  flake.nix
src/: error.rs  lib.rs  main.rs
src/embedders/: mod.rs
src/embedders/vision/: imtensor.rs  mod.rs  vmodel.rs
