[package]
name = "edge_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "2.7"
image = "0.25"
outlines-core = {version = "0.2", default-features = false}
#sentencepiece = "0.13"
thiserror = "2"
tokenizers = "0.23"
usearch = "2"
executorch = { git = "https://github.com/jbrummack/executorch-rs.git", rev = "36d6943df44b9a740fc19c9996b2355516f3bd77",  features = ["ndarray","xnnpack","quantised_kernels","module","download_prebuilt", "optimised_kernels","coreml"]}
[features]
default = ["half"]
half = ["executorch/half"]
